returning self now in #update_properties_from. added #from_json and #from_xml on instance level. thanks to [seancribbs] for inspiring me!

--- a/CHANGES.textile
+++ b/CHANGES.textile
@@ -1,6 +1,6 @@
 h2. 0.9.1
 
-* Extracted common serialization into @Representable#create_representation_with@.
+* Extracted common serialization into @Representable#create_representation_with@ and deserialization into @#update_properties_from@.
   
 h2. 0.9.0
 
