--- a/CHANGES.textile
+++ b/CHANGES.textile
@@ -1,3 +1,7 @@
+h2. 0.9.3
+
+* Removed the @:as => [..]@ syntax in favor of @:array => true@.
+
 h2. 0.9.2
 
 * Arguments and block now successfully forwarded in @#from_*@.
