--- a/README.rdoc
+++ b/README.rdoc
@@ -37,7 +37,7 @@ Since you keep forgetting the heroes of your childhood you decide to implement a
 
 This declares two simple properties. Representable will automatically add accessors to the class.
 
-If you don't want declarations in your models, use a module.
+Alternatively, if you don't want declarations in your models, use a module.
 
   module HeroRepresentation
     include Representable
