--- a/CHANGES.textile
+++ b/CHANGES.textile
@@ -1,3 +1,7 @@
+h2. 0.13.1
+
+* Removed property :@name from @XML@ in favor of @:attribute => true@.
+
 h2. 0.13.0
 
 * We no longer create accessors in @Representable.property@ - you have to do this yourself using @attr_accessors@.
