--- a/CHANGES.textile
+++ b/CHANGES.textile
@@ -1,3 +1,12 @@
+h2. 1.1.0
+
+* Added `JSON::Collection` to have plain list representations.
+* Defining `:extend` only on a property now works for rendering. If you try parsing without a `:class` there'll be an exception, though.
+
+h2. 1.0.1
+
+* Allow passing a list of modules to :extend, like @:extend => [Ingredient, IngredientRepresenter]@.
+
 h2. 1.0.0
 
 * 1.0.0 release! Party time!
