--- a/CHANGES.textile
+++ b/CHANGES.textile
@@ -1,3 +1,7 @@
+h2. 1.1.3
+
+* Introduced `#compile_fragment` and friends to make it simpler overriding parsing and rendering steps.
+
 h2. 1.1.2
 
 * Allow `Module.hash` to be called without arguments as this seems to be required in Padrino.
