--- a/CHANGES.textile
+++ b/CHANGES.textile
@@ -1,3 +1,7 @@
+h2. 1.1.5
+
+* Definitions are now properly cloned when @Config@ is cloned.
+
 h2. 1.1.4
 
 * representable_attrs is now cloned when a representer module is included in an inheriting representer.
